pow.bnf
Program    -> [Fun]
Fun        -> 'static' FunName '⊂' Params '⊃' '/' FunBody '\'
Fun        -> 'dynamic' FunName '⊂' Params '⊃' '/' FunBody '\'
FunName    -> Id
Variable   -> '~' Id
Id         -> [a-zA-Z_]+
Params     -> [Variable]
FunBody    -> [Statement]
Statement  -> Expr ':'
Expr       -> Assignment
Expr       -> Call
Expr       -> If
Expr       -> Loop
Expr       -> '#' [Expr]
Expr       -> '(' Expr ')'
Expr       -> Expr '+' Expr
Expr       -> Expr '-' Expr
Expr       -> Expr '*' Expr
Expr       -> Expr '/' Expr
Expr       -> Expr '<' Expr
Expr       -> Expr '<=' Expr
Expr       -> Expr '>' Expr
Expr       -> Expr '>=' Expr
Expr       -> Expr '↔' Expr
Expr       -> Expr '=' Expr
Expr       -> Expr '≠' Expr
Expr       -> Expr '&&' Expr
Expr       -> Variable
Expr       -> '⊥'
Expr       -> '⊤'
Expr       -> '⟛'
Expr       -> String
Expr       -> '✎' Expr
Expr       -> 'giveback' Expr
Expr       -> '↜' Expr
String     -> '|' [stuff] '|'
Assignment -> Variable '←' Expr
Call       -> '⊂' Args '⊃' ↝ FunName
Call       -> 'give' '⊂' Args '⊃' 'to' FunName
If         -> '¿' Expr '?' '/' [Expr] '\' Else
Else       -> '!' '/' [Expr] '\'
Else       ->
Loop       -> '⟳' Expr '?' '/' [Expr] '\'
